--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+ <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes Homepage</title>
-</head>
-<body>
+ </head>
+ <body>
     <h1>Recipes</h1>
+
+    <a href="recipes/french-toast.html">French Toast</a>
     
-</body>
+ </body>
 </html>
