Add description to french-toast.html

--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -9,5 +9,19 @@
  <body>
     <h1>French Toast</h1>
     <img src="french_toast.jpg" alt="Image of french toast">
+    <p>Whisk eggs, Parmesan cheese, milk, and black pepper in a shallow bowl until light and fluffy, about 1 minute. 
+    <p>Melt butter in a large skillet over medium heat.</p> 
+    <p>Dip both sides of each slice of bread in the egg mixture and place in the skillet. Cook until golden brown, 2 to 3 minutes per side. Transfer to a warmed plate and dot with butter to serve.</p>
+    <ul>
+        <li>Eggs</li>
+        <li>Milk</li>
+        <li>Bread</li>
+        <li>Butter</li>
+    </ul>
+    <ol>
+        <li>Whisk Eggs with Milk</li>
+        <li>Dip Bread in Mixture</li>
+        <li>Fry dipped bread in pan with butter</li>
+    </ol>
  </body>
 </html>
