--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -9,9 +9,8 @@
  <body>
     <h1>French Toast</h1>
     <img src="french_toast.jpg" alt="Image of french toast">
-    <p>Whisk eggs, Parmesan cheese, milk, and black pepper in a shallow bowl until light and fluffy, about 1 minute. 
-    <p>Melt butter in a large skillet over medium heat.</p> 
-    <p>Dip both sides of each slice of bread in the egg mixture and place in the skillet. Cook until golden brown, 2 to 3 minutes per side. Transfer to a warmed plate and dot with butter to serve.</p>
+    <p>French toast is a dish made of sliced bread soaked in beaten eggs, sugar and typically milk, then pan fried. Alternative names and variants include "eggy bread", "Bombay toast", "gypsy toast", and "poor knights" (of Windsor).</p> 
+    
     <ul>
         <li>Eggs</li>
         <li>Milk</li>
