Add new links to index.html and add additional images to site

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
  </head>
  <body>
     <h1>Recipes</h1>
+    <img src="breakfast.jpg" alt="Picture of egg dishes">
+    <h2>The essential breakfasts</h2>
 
-    <a href="recipes/french-toast.html">French Toast</a>
+    <ul>
+    <li><a href="recipes/french-toast.html">French Toast</a></li>
+    <li><a href="recipes/pancakes.html">Pancakes</a></li>
+    <li><a href="recipes/scrambled-eggs.html">Scrambled Eggs</a></li>
+    </ul>
     
  </body>
 </html>
